--- a/about.html
+++ b/about.html
@@ -2,11 +2,23 @@
 layout: page
 title: About Me
 description: This is what I do.
-background: '/img/bg-about.jpg'
+background: '/img/myself.jpg'
 ---
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quisquam ut perspiciatis, repudiandae nulla animi iste vel, praesentium repellendus molestias aliquid consequatur, earum rem qui error voluptates eius enim consequuntur!</p>
+<!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quisquam ut perspiciatis, repudiandae nulla animi iste vel, praesentium repellendus molestias aliquid consequatur, earum rem qui error voluptates eius enim consequuntur!</p>
 
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex alias, earum consectetur quia natus ducimus voluptate explicabo, hic porro reprehenderit, quasi? Tenetur ipsum distinctio laboriosam perspiciatis officiis dolore, architecto id.</p>
 
-<p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam inventore aspernatur repellendus incidunt adipisci modi voluptates recusandae iste eligendi, repudiandae corporis quod aut, optio! Explicabo quaerat unde voluptatem! Itaque, eum!</p>
+<p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam inventore aspernatur repellendus incidunt adipisci modi voluptates recusandae iste eligendi, repudiandae corporis quod aut, optio! Explicabo quaerat unde voluptatem! Itaque, eum!</p> -->
+
+
+
+<!-- <center><img src="../images/myself.jpg" alt="Alt text" title="Olive Tree" style="display: inline-block; margin: 0 auto; max-width: 200px"></center> -->
+
+<p>My name is Porter and I went to BYU - Idaho to study Data science with a math minor. I grew up in Colorado, served a mission in Charlotte, North Carolina Spanish speaking, but I didn't finish my entire mission so I did the service mission for a while. Once I was done with the service mission I still didn't finish the entire 2 years though. 
+
+I love digging deeper into the doctrine to really try to understand what the scriptures are saying and what God's interactions and dealings with his people mean. 
+
+I love programming in python, r, SQL, and learing about statistics, machine learning algorithms. Linear algebra is the most fascination math topic I have ever studied. 
+
+The purpose of this blog is to share some of those findings and insights I come accross that may help someone getting a fuller grasp of the gospel, history or any topic in between. Another purpose is to help people realize that there actually is a Balm in Gilead. </p>
