--- a/about.html
+++ b/about.html
@@ -2,14 +2,9 @@
 layout: page
 title: About Me
 description: This is what I do.
-background: '/img/myself.jpg'
+background: '/img/shrek.png'
 ---
 
-<!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quisquam ut perspiciatis, repudiandae nulla animi iste vel, praesentium repellendus molestias aliquid consequatur, earum rem qui error voluptates eius enim consequuntur!</p>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex alias, earum consectetur quia natus ducimus voluptate explicabo, hic porro reprehenderit, quasi? Tenetur ipsum distinctio laboriosam perspiciatis officiis dolore, architecto id.</p>
-
-<p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam inventore aspernatur repellendus incidunt adipisci modi voluptates recusandae iste eligendi, repudiandae corporis quod aut, optio! Explicabo quaerat unde voluptatem! Itaque, eum!</p> -->
 
 
 
@@ -22,3 +17,4 @@ I love digging deeper into the doctrine to really try to understand what the scr
 I love programming in python, r, SQL, and learing about statistics, machine learning algorithms. Linear algebra is the most fascination math topic I have ever studied. 
 
 The purpose of this blog is to share some of those findings and insights I come accross that may help someone getting a fuller grasp of the gospel, history or any topic in between. Another purpose is to help people realize that there actually is a Balm in Gilead. </p>
+
