--- a/_posts/If God really loves us so much, why does he allow so much suffering.html
+++ b/_posts/If God really loves us so much, why does he allow so much suffering.html
@@ -7,3 +7,33 @@ background: '/img/gethsemane.jpg'
 ---
 
 
+<center>
+<img src="../images/gethsemane.jpg" alt="Alt text" title="Olive Tree" style="display: inline-block; margin: 0 auto; max-width: 400px">
+</center>
+<p>It's a big question and can't be fully answered with a simple one liner or one size fits all solution. We're gonna take a stab at answering this question. </p>
+<p>It is a question every believer asks at some point during their lifetime. There is so much suffering in the world. Job is one example of a righteous person who suffered many afflictions. There are examples of righteous people who suffered greatly, unrighteous people who suffered greatly. People who's suffering was a result of their own actions, and people who's suffering was a result of others actions, or just happened. Whatever the category, everyone experiences suffering to some degree in their lifetimes. </p>
+# Righteous who suffer
+
+<p>Many disciples of Jesus have gone through great trials and afflictions for the God's sake. Examples of these disciples include: 
+- Joseph Smith
+    During his time in Liberty jail, The Prophet Joseph Smith asked God where He was. 
+    D&C 121
+    > 1 O God, where art thou? And where is the pavilion that covereth thy bhiding place?
+    And God responded.
+    > 7 My son, peace be unto thy soul; thine adversity and thine afflictions shall be but a small moment;
+    > 8 And then, if thou endure it well, God shall exalt thee on high; thou shalt triumph over all thy foes.
+- Job
+    Job was cursed with afflictions so bad he wished he were never born. 
+- Peter
+- Jesus Christ
+- And many more...
+In many cases, the suffering of these individuals </p>
+# Unrighteous who suffer
+# Those who never knew God who suffer
+
+
+
+
+
+Hank Smith and John Bytheway dove into this question during the Job episode of Come Follow Him. They quoted Victor Frankyl show said, 
+
