--- a/_posts/2020-01-26-dinosaurs.html
+++ b/_posts/2020-01-26-dinosaurs.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "If God really loves us so much, why does he allow so much suffering?"
-subtitle: "because they lacked opposable thumbs and the brainpower to build a space program."
+subtitle: "O God, Where art thou"
 date: 2020-01-26 23:45:13 -0400
 background: '/img/gethsemane.jpg'
 ---
