--- a/_posts/If God really loves us so much, why does he allow so much suffering.html
+++ b/_posts/If God really loves us so much, why does he allow so much suffering.html
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: "If God really loves us so much, why does he allow so much suffering?"
-subtitle: "Problems look mighty small from 150 miles up"
-date: 2020-01-31 10:45:13 -0400
+subtitle: "O God, Where art thou"
+date: 2022-12-23 23:45:13 -0400
 background: '/img/gethsemane.jpg'
 ---
 
@@ -14,9 +14,9 @@ background: '/img/gethsemane.jpg'
 <p>It is a question every believer asks at some point during their lifetime. There is so much suffering in the world. Job is one example of a righteous person who suffered many afflictions. There are examples of righteous people who suffered greatly, unrighteous people who suffered greatly. People who's suffering was a result of their own actions, and people who's suffering was a result of others actions, or just happened. Whatever the category, everyone experiences suffering to some degree in their lifetimes. </p>
 # Righteous who suffer
 
-<p>Many disciples of Jesus have gone through great trials and afflictions for the God's sake. Examples of these disciples include: 
-- Joseph Smith
-    During his time in Liberty jail, The Prophet Joseph Smith asked God where He was. 
+<p>Many disciples of Jesus have gone through great trials and afflictions for the God's sake. Examples of these disciples include: </p>
+<p>- Joseph Smith</p>
+<p>    During his time in Liberty jail, The Prophet Joseph Smith asked God where He was. </p>
     D&C 121
     > 1 O God, where art thou? And where is the pavilion that covereth thy bhiding place?
     And God responded.
@@ -36,4 +36,5 @@ In many cases, the suffering of these individuals </p>
 
 
 Hank Smith and John Bytheway dove into this question during the Job episode of Come Follow Him. They quoted Victor Frankyl show said, 
-
+    
+    
