--- a/_posts/The book of life and how we are judged.html
+++ b/_posts/The book of life and how we are judged.html
@@ -1,4 +1,10 @@
-
+---
+layout: post
+title: "Polygamy"
+subtitle: "One man married to multiple women"
+date: 2022-12-18 10:45:13 -0400
+background: '/img/posts/06.jpg'
+---
 
 # The Book of Life and How we are Judged
 
