--- a/_posts/the 3 wise men.html
+++ b/_posts/the 3 wise men.html
@@ -1,4 +1,10 @@
-
+---
+layout: post
+title: "Is there no Balm in Gilead?"
+subtitle: "The healing ointment found in Gilead"
+date: 2022-12-21 23:45:13 -0400
+background: '/img/gilead_bush.jpg'
+---
 
 # The 3 Wise Men
 
