--- a/_posts/2022-12-13-The book of life and how we are judged.html
+++ b/_posts/2022-12-13-The book of life and how we are judged.html
@@ -6,18 +6,18 @@ date: 2022-12-13 10:45:13 -0400
 background: '/img/posts/06.jpg'
 ---
 
-# The Book of Life and How we are Judged
 
 
-There are several [references to the Book of Life][1] in scripture. There are also references to a [Book of Rememberence][2]
+
+<p> There are several references to <a href="https://www.churchofjesuschrist.org/study/scriptures/gs/book-of-life?lang=eng">the Book of Life</a> in scripture. There are also references to a <a href="https://www.churchofjesuschrist.org/study/scriptures/gs/book-of-remembrance?lang=eng">Book of Rememberence</a></p>
 
 
-# The Book of Life
+<h2>The Book of Life</h2>
 
 > 58 For the names of the righteous shall be written in the book of life, and unto them will I grant an inheritance at my right hand. And now, my brethren, what have ye to say against this? I say unto you, if ye speak against it, it matters not, for the word of God must be fulfilled.
 
 
-Our prayers are recorded in the book of names
+<p>Our prayers are recorded in the book of names<\p>
 
 
 > 2 Behold, this is pleasing unto your Lord, and the angels rejoice over you; the alms of your prayers have come up into the ears of the Lord of Sabaoth, and are recorded in the book of the names of the sanctified, even them of the celestial world.
@@ -30,13 +30,6 @@ The Book of Rememberence was started by Adam to record the works of his children
 It is also the case that those who were written in The Book of Remberence
 
 
-
-
-
-
-
-[1]: https://www.churchofjesuschrist.org/study/scriptures/gs/book-of-life?lang=eng
-[2]: https://www.churchofjesuschrist.org/study/scriptures/gs/book-of-remembrance?lang=eng
 
 
 
