--- a/_posts/2022-12-21-is there no balm in gilead.html
+++ b/_posts/2022-12-21-is there no balm in gilead.html
@@ -9,7 +9,7 @@ background: '/img/gilead_bush.jpg'
 
 This question comes from the following verse in Jeremiah.
 
-> 22 Is there no balm in Gilead; is there no physician there? why then is not the health of the daughter of my people recovered?
+<q> 22 Is there no balm in Gilead; is there no physician there? why then is not the health of the daughter of my people recovered?</q>
 
 
 ## Background
