--- a/_posts/2022-12-18-the 3 wise men.html
+++ b/_posts/2022-12-18-the 3 wise men.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Is there no Balm in Gilead?"
+title: "The 3 wise men"
 subtitle: "The healing ointment found in Gilead"
 date: 2022-12-18 23:45:13 -0400
 background: '/img/gilead_bush.jpg'
