--- a/_posts/2022-12-18-the 3 wise men.html
+++ b/_posts/2022-12-18-the 3 wise men.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "The 3 wise men"
-subtitle: "The healing ointment found in Gilead"
+subtitle: "Who followed the star"
 date: 2022-12-18 23:45:13 -0400
 background: '/img/gilead_bush.jpg'
 ---
