--- a/_posts/2022-12-13-The book of life and how we are judged.html
+++ b/_posts/2022-12-13-The book of life and how we are judged.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Polygamy"
+title: "The Book of Like and How we are judged"
 subtitle: "One man married to multiple women"
 date: 2022-12-13 10:45:13 -0400
 background: '/img/posts/06.jpg'
