--- a/_posts/2022-12-13-The book of life and how we are judged.html
+++ b/_posts/2022-12-13-The book of life and how we are judged.html
@@ -3,7 +3,7 @@ layout: post
 title: "The Book of Like and How we are judged"
 subtitle: "Deeper insights on our judgement"
 date: 2022-12-13 10:45:13 -0400
-background: '/img/posts/06.jpg'
+background: '/img/posts/judgement.jpg'
 ---
 
 
