--- a/_posts/2022-12-23-the 3 wise men.html
+++ b/_posts/2022-12-23-the 3 wise men.html
@@ -3,7 +3,7 @@ layout: post
 title: "The 3 wise men"
 subtitle: "Who followed the star"
 date: 2022-12-23 23:45:13 -0400
-background: '/img/gilead_bush.jpg'
+background: '/img/posts/gilead_bush.jpg'
 ---
 
 # The 3 Wise Men
