--- a/_posts/2022-12-21-is there no balm in gilead.html
+++ b/_posts/2022-12-21-is there no balm in gilead.html
@@ -3,7 +3,7 @@ layout: post
 title: "Is there no Balm in Gilead?"
 subtitle: "The healing ointment found in Gilead"
 date: 2022-12-21 23:45:13 -0400
-background: '/img/gilead_bush.jpg'
+background: '/img/posts/gilead_bush.jpg'
 ---
 
 
