--- a/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
+++ b/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
@@ -3,7 +3,7 @@ layout: post
 title: "If God really loves us so much, why does he allow so much suffering?"
 subtitle: "O God, Where art thou"
 date: 2022-12-22 23:45:13 -0400
-background: '/img/gethsemane.jpg'
+background: '/img/posts/gethsemane.jpg'
 ---
 
 
