--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: About Me
-description: This is what I do.
+description: YOOOO its me P dawg!!
 background: '/img/shrek.png'
 ---
 
