--- a/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
+++ b/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "If God really loves us so much, why does he allow so much suffering?"
-subtitle: "O God, Where art thou"
+subtitle: "O God, Where art thou?"
 date: 2022-12-22 23:45:13 -0400
 background: '/img/posts/gethsemane.jpg'
 ---
@@ -15,10 +15,10 @@ background: '/img/posts/gethsemane.jpg'
 <p>- Joseph Smith</p>
 <p>    During his time in Liberty jail, The Prophet Joseph Smith asked God where He was. </p>
     D&C 121
-    > 1 O God, where art thou? And where is the pavilion that covereth thy bhiding place?
+    <q> 1 O God, where art thou? And where is the pavilion that covereth thy bhiding place?</q>
     And God responded.
-    > 7 My son, peace be unto thy soul; thine adversity and thine afflictions shall be but a small moment;
-    > 8 And then, if thou endure it well, God shall exalt thee on high; thou shalt triumph over all thy foes.
+    <q> 7 My son, peace be unto thy soul; thine adversity and thine afflictions shall be but a small moment;</q>
+    <q> 8 And then, if thou endure it well, God shall exalt thee on high; thou shalt triumph over all thy foes.</q>
 - Job
     Job was cursed with afflictions so bad he wished he were never born. 
 - Peter
