--- a/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
+++ b/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
@@ -9,7 +9,7 @@ background: '/img/posts/gethsemane.jpg'
 
 <p>It's a big question and can't be fully answered with a simple one liner or one size fits all solution. We're gonna take a stab at answering this question. </p>
 <p>It is a question every believer asks at some point during their lifetime. There is so much suffering in the world. Job is one example of a righteous person who suffered many afflictions. There are examples of righteous people who suffered greatly, unrighteous people who suffered greatly. People who's suffering was a result of their own actions, and people who's suffering was a result of others actions, or just happened. Whatever the category, everyone experiences suffering to some degree in their lifetimes. </p>
-# Righteous who suffer
+<h2>Righteous who suffer</h2>
 
 <p>Many disciples of Jesus have gone through great trials and afflictions for the God's sake. Examples of these disciples include: </p>
 <p>- Joseph Smith</p>
