git awesome swag

--- a/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
+++ b/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
@@ -12,21 +12,36 @@ background: '/img/posts/gethsemane.jpg'
 <h2>Righteous who suffer</h2>
 
 <p>Many disciples of Jesus have gone through great trials and afflictions for the God's sake. Examples of these disciples include: </p>
-<p>- Joseph Smith</p>
-<p>    During his time in Liberty jail, The Prophet Joseph Smith asked God where He was. </p>
-    D&C 121
-    <q> 1 O God, where art thou? And where is the pavilion that covereth thy bhiding place?</q>
-    And God responded.
-    <q> 7 My son, peace be unto thy soul; thine adversity and thine afflictions shall be but a small moment;</q>
-    <q> 8 And then, if thou endure it well, God shall exalt thee on high; thou shalt triumph over all thy foes.</q>
-- Job
-    Job was cursed with afflictions so bad he wished he were never born. 
-- Peter
-- Jesus Christ
+
+<ul>
+    <li>
+    <p>- Joseph Smith</p>
+    <p>    During his time in Liberty jail, The Prophet Joseph Smith asked God where He was. </p>
+        D&C 121
+        <q> 1 O God, where art thou? And where is the pavilion that covereth thy bhiding place?</q>
+        And God responded.
+        <q> 7 My son, peace be unto thy soul; thine adversity and thine afflictions shall be but a small moment;</q>
+        <q> 8 And then, if thou endure it well, God shall exalt thee on high; thou shalt triumph over all thy foes.</q>
+    </li>
+    <li>
+    Job
+        Job was cursed with afflictions so bad he wished he were never born. 
+
+    </li>
+    <li>
+    Peter
+    </li>
+    <li>
+    Jesus Christ
+    </li>
+    
+</ul>
+
+
 - And many more...
 In many cases, the suffering of these individuals </p>
-# Unrighteous who suffer
-# Those who never knew God who suffer
+<h2>Unrighteous who suffer</h2>
+<h2>Those who never knew God who suffer</h2>
 
 
 
