--- a/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
+++ b/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
@@ -15,7 +15,7 @@ background: '/img/posts/gethsemane.jpg'
 
 <ul>
     <li>
-    <p>- Joseph Smith</p>
+    <p>Joseph Smith</p>
     <p>    During his time in Liberty jail, The Prophet Joseph Smith asked God where He was. </p>
         D&C 121
         <q> 1 O God, where art thou? And where is the pavilion that covereth thy bhiding place?</q>
