--- a/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
+++ b/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
@@ -15,16 +15,18 @@ background: '/img/posts/gethsemane.jpg'
 
 <ul>
     <li>
-    <p>Joseph Smith</p>
-    <p>    During his time in Liberty jail, The Prophet Joseph Smith asked God where He was. </p>
+    <p>
+        Joseph Smith
+        During his time in Liberty jail, The Prophet Joseph Smith asked God where He was. 
         D&C 121
         <q> 1 O God, where art thou? And where is the pavilion that covereth thy bhiding place?</q>
         And God responded.
         <q> 7 My son, peace be unto thy soul; thine adversity and thine afflictions shall be but a small moment;</q>
         <q> 8 And then, if thou endure it well, God shall exalt thee on high; thou shalt triumph over all thy foes.</q>
+    </p>
     </li>
     <li>
-    Job
+        Job
         Job was cursed with afflictions so bad he wished he were never born. 
 
     </li>
@@ -41,6 +43,15 @@ background: '/img/posts/gethsemane.jpg'
 - And many more...
 In many cases, the suffering of these individuals </p>
 <h2>Unrighteous who suffer</h2>
+<lu>
+    <li>
+        Those who suffer because of their own sins.
+    </li>
+    <li>
+        
+    </li>
+</lu>
+
 <h2>Those who never knew God who suffer</h2>
 
 
