--- a/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
+++ b/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
@@ -15,15 +15,13 @@ background: '/img/posts/gethsemane.jpg'
 
 <ul>
     <li>
-    <p>
-        Joseph Smith
-        During his time in Liberty jail, The Prophet Joseph Smith asked God where He was. 
-        D&C 121
-        <q> 1 O God, where art thou? And where is the pavilion that covereth thy bhiding place?</q>
-        And God responded.
-        <q> 7 My son, peace be unto thy soul; thine adversity and thine afflictions shall be but a small moment;</q>
-        <q> 8 And then, if thou endure it well, God shall exalt thee on high; thou shalt triumph over all thy foes.</q>
-    </p>
+    Joseph Smith
+    During his time in Liberty jail, The Prophet Joseph Smith asked God where He was. 
+    D&C 121
+    <q> 1 O God, where art thou? And where is the pavilion that covereth thy bhiding place?</q>
+    And God responded.
+    <q> 7 My son, peace be unto thy soul; thine adversity and thine afflictions shall be but a small moment;</q>
+    <q> 8 And then, if thou endure it well, God shall exalt thee on high; thou shalt triumph over all thy foes.</q>
     </li>
     <li>
         Job
@@ -35,13 +33,15 @@ background: '/img/posts/gethsemane.jpg'
     </li>
     <li>
     Jesus Christ
+    In Psalm 22:1 David foretells Jesus saying, 
+    "1 My God, my God, why hast thou bforsaken me? why art thou so far from helping me, and from cthe words of my roaring?"
     </li>
     
 </ul>
 
 
-- And many more...
-In many cases, the suffering of these individuals </p>
+<!-- - And many more... -->
+<!-- In many cases, the suffering of these individuals </p> -->
 <h2>Unrighteous who suffer</h2>
 <lu>
     <li>
