--- a/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
+++ b/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
@@ -34,7 +34,16 @@ background: '/img/posts/gethsemane.jpg'
     <li>
     Jesus Christ
     In Psalm 22:1 David foretells Jesus saying, 
-    "1 My God, my God, why hast thou bforsaken me? why art thou so far from helping me, and from cthe words of my roaring?"
+    "1 My God, my God, why hast thou forsaken me? Why art thou so far from helping me, and from the words of my roaring?"
+    And Matthew 27:46 says, "46 And about the ninth hour Jesus cried with a loud voice, saying, Eli, Eli, lama sabachthani?
+     that is to say, aMy God, my God, why hast thou bforsaken me?" During the crucifixion of Jesus Christ. <br>
+
+    During His suffering in gethsemane we have the following verse 
+    describing His sufferings:<br>
+    Alma 7:11
+    "11 And he shall go forth, suffering pains and afflictions and temptations of every kind; 
+    and this that the word might be fulfilled which saith he will take upon him the pains and the sicknesses of his people."
+
     </li>
     
 </ul>
