--- a/_posts/2022-12-23-the 3 wise men.html
+++ b/_posts/2022-12-23-the 3 wise men.html
@@ -3,11 +3,17 @@ layout: post
 title: "The 3 wise men"
 subtitle: "Who followed the star"
 date: 2022-12-23 23:45:13 -0400
-background: '/img/posts/gilead_bush.jpg'
+background: '/img/posts/wise.jpg'
 ---
 
-# The 3 Wise Men
+<h1>The Wise men of the East</h2>
 
+<p>
+    A group of men (It is not known how many) were guided from a land East of Palestine.
+    It is evident they were men of strong spiritual strength because they noticed, and recognized the star of Jesus' birth. 
+    It is also likely that they came from a branch of the Lord's people and then returned to bear witness of the birth of Christ. 
+
+</p>
 
 <center>
 <img src="../images/wise_men.jpg" alt="Alt text" title="wise men" style="display: inline-block; margin: 0 auto; max-width: 350px">
