--- a/_posts/2022-12-23-the 3 wise men.html
+++ b/_posts/2022-12-23-the 3 wise men.html
@@ -15,21 +15,25 @@ background: '/img/posts/wise.jpg'
 
 </p>
 
-<center>
+<!-- <center>
 <img src="../images/wise_men.jpg" alt="Alt text" title="wise men" style="display: inline-block; margin: 0 auto; max-width: 350px">
-</center>
+</center> -->
 
-“When we find him, will we be prepared as were the wise men of old to provide gifts from our many treasures? They presented gold, frankincense, and myrrh. These are not the gifts Jesus asks of us. From the treasure of our hearts Jesus asks that we give of ourselves: ‘Behold, the Lord requireth the heart and a willing mind’[1]”
+<br>
+<p>
+    “When we find him, will we be prepared as were the wise men of old to provide gifts from our many treasures? They presented gold, frankincense, and myrrh. These are not the gifts Jesus asks of us. From the treasure of our hearts Jesus asks that we give of ourselves: ‘Behold, the Lord requireth the heart and a willing mind’[1]”
 
-The story of the three wise men who traveled to the birth of Jesus is a wonderful story with rich and inspiring symbolism.
+    The story of the three wise men who traveled to the birth of Jesus is a wonderful story with rich and inspiring symbolism.
 
-# What we know about the wise men
+</p>
+
+<!-- # What we know about the wise men -->
 
 
 
 
 
-[1]: https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/64?lang=eng&id=34#p34
+<!-- [1]: https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/64?lang=eng&id=34#p34 -->
 
 
 
