--- a/_posts/2022-12-23-the 3 wise men.html
+++ b/_posts/2022-12-23-the 3 wise men.html
@@ -21,9 +21,13 @@ background: '/img/posts/wise.jpg'
 
 <br>
 <p>
-    “When we find him, will we be prepared as were the wise men of old to provide gifts from our many treasures? They presented gold, frankincense, and myrrh. These are not the gifts Jesus asks of us. From the treasure of our hearts Jesus asks that we give of ourselves: ‘Behold, the Lord requireth the heart and a willing mind’[1]”
+    “When we find him, will we be prepared as were the wise men of old to provide gifts from our many treasures? 
+    They presented gold, frankincense, and myrrh. These are not the gifts Jesus asks of us. 
+    From the treasure of our hearts Jesus asks that we give of ourselves: 
+    ‘Behold, the Lord requireth the heart and a willing mind’”
 
-    The story of the three wise men who traveled to the birth of Jesus is a wonderful story with rich and inspiring symbolism.
+    The story of the three wise men who traveled to the birth of Jesus 
+    is a wonderful story with rich and inspiring symbolism.
 
 </p>
 
