--- a/_posts/2022-12-23-the 3 wise men.html
+++ b/_posts/2022-12-23-the 3 wise men.html
@@ -17,9 +17,12 @@ background: '/img/posts/wise.jpg'
 
 
 <br>
+
 <p>
-    “When we find him, will we be prepared as were the wise men of old to provide gifts from our many treasures? 
-    They presented gold, frankincense, and myrrh. <br>
+    THERE ARE two traditions. The first, referred to in the carol 'We Three Kings', 
+    interprets the gifts as symbolising three aspects of Christ's future life: 
+    gold to pay for the stable, the frankincense to perfume it and the myrrh as an ointment for the new-born baby.
+    <br>
     These are not the gifts Jesus asks of us. From the treasure of our hearts Jesus asks that we give of ourselves: 
     ‘Behold, the Lord requireth the heart and a willing mind’”
 
@@ -27,8 +30,5 @@ background: '/img/posts/wise.jpg'
     is a wonderful story with rich and inspiring symbolism.
 
 </p>
-
-
-
 
 
