--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: About Me
-description: Hi
+description: YOOOOOO its me p-dawg
 background: '/img/shrek.png'
 ---
 
@@ -17,5 +17,7 @@ background: '/img/shrek.png'
     I love programming in python, r, SQL, and learing about statistics, machine learning algorithms. 
     Linear algebra is the most fascination math topic I have ever studied. </p>
 
-<p> purpose of this blog is to share some of those findings and insights I come accross that may help someone getting a fuller grasp of the gospel, history or any topic in between. Another purpose is to help people realize that there actually is a Balm in Gilead. </p>
+<p> purpose of this blog is to share some of those findings and insights I come 
+    across that may help someone getting a fuller grasp of the gospel, history or any topic in between. 
+    Another purpose is to help people realize that there actually is a Balm in Gilead. </p>
 
