--- a/contact.html
+++ b/contact.html
@@ -15,17 +15,17 @@ form: true
       <p class="help-block text-danger"></p>
     </div>
   </div>
-  <div class="control-group">
+  <!-- <div class="control-group">
     <div class="form-group floating-label-form-group controls">
       <label>Email Address</label>
       <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
       <p class="help-block text-danger"></p>
     </div>
-  </div>
+  </div> -->
   <div class="control-group">
     <div class="form-group col-xs-12 floating-label-form-group controls">
       <label>Phone Number</label>
-      <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
+      <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Enter your phone number.">
       <p class="help-block text-danger"></p>
     </div>
   </div>
