--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Contact Me
-description: Have questions? I have answers.
+description: YOOO hit me up if you wanna chat...
 background: '/img/snake.jpg'
 form: true
 ---
