--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@ background: '/img/snake.jpg'
 form: true
 ---
 
-<p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
+<p>YOOOOO Fill out this form and I'll respond within 20 minutes!!</p>
 <form name="sentMessage" id="contactForm" novalidate>
   <div class="control-group">
     <div class="form-group floating-label-form-group controls">
