--- a/_posts/2022-12-23-the 3 wise men.html
+++ b/_posts/2022-12-23-the 3 wise men.html
@@ -36,7 +36,7 @@ background: '/img/posts/wise.jpg'
 
 
 <script src="https://utteranc.es/client.js"
-        repo="[ENTER REPO HERE]"
+        repo="porterbmoody.github.io"
         issue-term="pathname"
         theme="github-light"
         crossorigin="anonymous"
