--- a/_posts/2022-12-23-the 3 wise men.html
+++ b/_posts/2022-12-23-the 3 wise men.html
@@ -37,8 +37,9 @@ background: '/img/posts/wise.jpg'
 
 <script src="https://utteranc.es/client.js"
         repo="porterbmoody.github.io"
-        issue-term="pathname"
+        issue-term="porterbmoody.github.io"
         theme="github-light"
         crossorigin="anonymous"
         async>
 </script>
+
