--- a/about.html
+++ b/about.html
@@ -21,3 +21,12 @@ background: '/img/shrek.png'
     across that may help someone getting a fuller grasp of the gospel, history or any topic in between. 
     Another purpose is to help people realize that there actually is a Balm in Gilead. </p>
 
+
+<script src="https://utteranc.es/client.js"
+    repo="porterbmoody.github.io"
+    issue-term="pathname"
+    label="swagawesomeness"
+    theme="github-dark-orange"
+    crossorigin="anonymous"
+    async>
+</script>
