--- a/_posts/2022-12-23-the 3 wise men.html
+++ b/_posts/2022-12-23-the 3 wise men.html
@@ -23,11 +23,11 @@ background: '/img/posts/wise.jpg'
     interprets the gifts as symbolising three aspects of Christ's future life: 
     gold to pay for the stable, the frankincense to perfume it and the myrrh as an ointment for the new-born baby.
     <br>
-    These are not the gifts Jesus asks of us. From the treasure of our hearts Jesus asks that we give of ourselves: 
-    ‘Behold, the Lord requireth the heart and a willing mind’”
+    <!-- These are not the gifts Jesus asks of us. From the treasure of our hearts Jesus asks that we give of ourselves:  -->
+    <!-- ‘Behold, the Lord requireth the heart and a willing mind’” -->
 
-    The story of the three wise men who traveled to the birth of Jesus 
-    is a wonderful story with rich and inspiring symbolism.
+    <!-- The story of the three wise men who traveled to the birth of Jesus  -->
+    <!-- is a wonderful story with rich and inspiring symbolism. -->
 
 </p>
 
