--- a/_posts/2022-12-23-the 3 wise men.html
+++ b/_posts/2022-12-23-the 3 wise men.html
@@ -1,4 +1,4 @@
----
+S---
 layout: post
 title: "The 3 wise men"
 subtitle: "Who followed the star"
@@ -9,22 +9,41 @@ background: '/img/posts/wise.jpg'
 <h1>The Wise men of the East</h2>
 
 <p>
-    A group of men (It is not known how many) were guided from a land East of Palestine.
-    It is evident they were men of strong spiritual strength because they noticed, and recognized the star of Jesus' birth. 
-    It is also likely that they came from a branch of the Lord's people and then returned to bear witness of the birth of Christ. 
-
+    
 </p>
 
 
 <br>
 
 <p>
-    THERE ARE two traditions. The first, referred to in the carol 'We Three Kings', 
-    interprets the gifts as symbolising three aspects of Christ's future life: 
-    gold to pay for the stable, the frankincense to perfume it and the myrrh as an ointment for the new-born baby.
+    <h2>Who were the wise men?</h2>
+    A group of men (It is not known how many) were guided from a land East of Palestine.
+    It is evident they were men of strong spiritual strength because they noticed, and recognized the star of Jesus' birth. 
+    It is also possible that they came from a branch of the Lord's people 
+    and then returned to bear witness of the birth of Christ. 
+    The wise men were actually called Magi which means mistics. 
+    <!-- Persian or babylonian jews.  -->
+    They go immediately after they see the star. 
+    They made their way so that about 7 weeks later they find 
+    Mary and Joseph in Bethlehem with the child. 
+
+    <h2>The Star</h2>
+    We have Old testament and Book of Mormon references to a physical star being shown.
+    Once the wise men saw the star they immediately recognized it and started their 7 week journey to Bethlehem. 
+
+    <!-- Luke 2 Jesus is circumcised 8 days. In Luke 2 -->
+    <!-- 6 weeks later Jesus is taken to the temple. Shortly after the temple episode -->
+
+
+
+    The East was mesopotamia. 
     <br>
-    <!-- These are not the gifts Jesus asks of us. From the treasure of our hearts Jesus asks that we give of ourselves:  -->
-    <!-- ‘Behold, the Lord requireth the heart and a willing mind’” -->
+    <h2>The Gifts</h2>
+    Gold representing kingship, frankincense (worship) and myrrh (death and mourning).
+    These are not the gifts Jesus asks of us. From the treasure of our hearts Jesus asks that we give of ourselves: 
+    ‘Behold, the Lord requireth the heart and a willing mind’”
+
+    
 
     <!-- The story of the three wise men who traveled to the birth of Jesus  -->
     <!-- is a wonderful story with rich and inspiring symbolism. -->
