--- a/_posts/2022-12-23-the 3 wise men.html
+++ b/_posts/2022-12-23-the 3 wise men.html
@@ -25,7 +25,7 @@ background: '/img/posts/wise.jpg'
     <!-- Persian or babylonian jews.  -->
     They go immediately after they see the star. 
     They made their way so that about 7 weeks later they find 
-    Mary and Joseph in Bethlehem with the child. 
+    Mary and Joseph in Bethlehem with the child. This means they were not actually there on the night of His birth. 
 
     <h2>The Star</h2>
     We have Old testament and Book of Mormon references to a physical star being shown.
@@ -43,7 +43,10 @@ background: '/img/posts/wise.jpg'
     These are not the gifts Jesus asks of us. From the treasure of our hearts Jesus asks that we give of ourselves: 
     ‘Behold, the Lord requireth the heart and a willing mind’”
 
-    
+    <h2>The meaning</h2>
+    There is significance in the fact that the Wise Men sought Jesus. 
+    There were few who sought honestly Jesus and were blessed with a true sign of Him and ultimately the 
+    opportunity to see Him as a child. 
 
     <!-- The story of the three wise men who traveled to the birth of Jesus  -->
     <!-- is a wonderful story with rich and inspiring symbolism. -->
