--- a/_posts/2022-12-23-the 3 wise men.html
+++ b/_posts/2022-12-23-the 3 wise men.html
@@ -23,13 +23,22 @@ background: '/img/posts/wise.jpg'
     and then returned to bear witness of the birth of Christ. 
     The wise men were actually called Magi which means mistics. 
     <!-- Persian or babylonian jews.  -->
-    They go immediately after they see the star. 
-    They made their way so that about 7 weeks later they find 
-    Mary and Joseph in Bethlehem with the child. This means they were not actually there on the night of His birth. 
 
     <h2>The Star</h2>
     We have Old testament and Book of Mormon references to a physical star being shown.
     Once the wise men saw the star they immediately recognized it and started their 7 week journey to Bethlehem. 
+    They initially arrived in Jerusalem and met King Herod. 
+    They then acquired of Herod where Jesus was born and King Herod told them to go to Bethlehem and once they see
+    Jesus to return and inform him so Herod could go a worship too. 
+    
+    So the wise men traveled to Bethlehem and saw the star above the stable. 
+
+    Mathew 2:7
+    <q>10 When they saw the star, they rejoiced with exceeding great joy.</q>
+    
+    Mary and Joseph in Bethlehem with the child. This means they were not actually there on the night of His birth. 
+
+
 
     <!-- Luke 2 Jesus is circumcised 8 days. In Luke 2 -->
     <!-- 6 weeks later Jesus is taken to the temple. Shortly after the temple episode -->
