--- a/_posts/2022-12-23-the 3 wise men.html
+++ b/_posts/2022-12-23-the 3 wise men.html
@@ -17,6 +17,7 @@ background: '/img/posts/wise.jpg'
     <!-- Persian or babylonian jews.  -->
 
     <h2>The Star</h2>
+    <img src="star.jpg">
     We have Old testament and Book of Mormon references to a physical star being shown.
     Once the wise men saw the star they immediately recognized it and started their 7 week journey to Bethlehem. 
     They initially arrived in Jerusalem and met King Herod. 
@@ -29,11 +30,6 @@ background: '/img/posts/wise.jpg'
     <q>10 When they saw the star, they rejoiced with exceeding great joy.</q>
     
     Mary and Joseph in Bethlehem with the child. This means they were not actually there on the night of His birth. 
-
-
-
-    <!-- Luke 2 Jesus is circumcised 8 days. In Luke 2 -->
-    <!-- 6 weeks later Jesus is taken to the temple. Shortly after the temple episode -->
 
 
 
