--- a/_posts/2022-12-23-the 3 wise men.html
+++ b/_posts/2022-12-23-the 3 wise men.html
@@ -25,15 +25,15 @@ background: '/img/posts/wise.jpg'
     Jesus to return and inform him so Herod could go a worship too. 
     
     So the wise men traveled to Bethlehem and saw the star above the stable. 
-
+    <br>
     Mathew 2:7
     <q>10 When they saw the star, they rejoiced with exceeding great joy.</q>
-    
+    <br>
     Mary and Joseph in Bethlehem with the child. This means they were not actually there on the night of His birth. 
 
 
 
-    The East was mesopotamia. 
+    <!-- The East was mesopotamia.  -->
     <br>
     <h2>The Gifts</h2>
     Gold representing kingship, frankincense (worship) and myrrh (death and mourning).
