--- a/_posts/2022-12-23-the 3 wise men.html
+++ b/_posts/2022-12-23-the 3 wise men.html
@@ -14,7 +14,6 @@ background: '/img/posts/wise.jpg'
     It is also possible that they came from a branch of the Lord's people 
     and then returned to bear witness of the birth of Christ. 
     The wise men were actually called Magi which means mistics. 
-    <!-- Persian or babylonian jews.  -->
 
     <h2>The Star</h2>
     <img src="star.jpg">
@@ -29,7 +28,9 @@ background: '/img/posts/wise.jpg'
     Mathew 2:7
     <q>10 When they saw the star, they rejoiced with exceeding great joy.</q>
     <br>
-    Mary and Joseph in Bethlehem with the child. This means they were not actually there on the night of His birth. 
+
+    After having seen Jesus, they were warned in a dream not to return to Herod so they went their way back home.
+    <!-- Mary and Joseph in Bethlehem with the child. This means they were not actually there on the night of His birth.  -->
 
 
 
