--- a/_posts/2022-12-23-the 3 wise men.html
+++ b/_posts/2022-12-23-the 3 wise men.html
@@ -31,10 +31,10 @@ background: '/img/posts/wise.jpg'
 
     After having seen Jesus, they were warned in a dream not to return to Herod so they went their way back home.
     <!-- Mary and Joseph in Bethlehem with the child. This means they were not actually there on the night of His birth.  -->
+    Mary and Joseph then parted for Egypt because the Lord told them King Herod would seek to kill the baby Jesus.
+    Once Herod realized the wise men did not return and give word to him 
+    about the location of Jesus, he had every child of age 2 and under killed. 
 
-
-
-    <!-- The East was mesopotamia.  -->
     <br>
     <h2>The Gifts</h2>
     Gold representing kingship, frankincense (worship) and myrrh (death and mourning).
