--- a/_posts/2022-12-23-the 3 wise men.html
+++ b/_posts/2022-12-23-the 3 wise men.html
@@ -16,7 +16,8 @@ background: '/img/posts/wise.jpg'
     The wise men were actually called Magi which means mistics. 
 
     <h2>The Star</h2>
-    <img src="star.jpg" alt="awesome pic">
+    <img src="img/posts/star.jpg" alt="awesome pic">
+    <br>
     We have Old testament and Book of Mormon references to a physical star being shown.
     Once the wise men saw the star they immediately recognized it and started their 7 week journey to Bethlehem. 
     They initially arrived in Jerusalem and met King Herod. 
@@ -30,7 +31,6 @@ background: '/img/posts/wise.jpg'
     <br>
 
     After having seen Jesus, they were warned in a dream not to return to Herod so they went their way back home.
-    <!-- Mary and Joseph in Bethlehem with the child. This means they were not actually there on the night of His birth.  -->
     Mary and Joseph then parted for Egypt because the Lord told them King Herod would seek to kill the baby Jesus.
     Once Herod realized the wise men did not return and give word to him 
     about the location of Jesus, he had every child of age 2 and under killed. 
