--- a/_posts/2022-12-23-the 3 wise men.html
+++ b/_posts/2022-12-23-the 3 wise men.html
@@ -16,7 +16,7 @@ background: '/img/posts/wise.jpg'
     The wise men were actually called Magi which means mistics. 
 
     <h2>The Star</h2>
-    <img src="img/posts/star.jpg" alt="awesome pic">
+    <img src="./img/posts/star.jpg" alt="awesome pic">
     <br>
     We have Old testament and Book of Mormon references to a physical star being shown.
     Once the wise men saw the star they immediately recognized it and started their 7 week journey to Bethlehem. 
