--- a/_posts/2022-12-23-the 3 wise men.html
+++ b/_posts/2022-12-23-the 3 wise men.html
@@ -7,7 +7,7 @@ background: '/img/posts/wise.jpg'
 ---
 
 
-<p>
+<p style="float:left">
     <h2>Who were the wise men?</h2>
     A group of men (It is not known how many) were guided from a land East of Palestine.
     It is evident they were men of strong spiritual strength because they noticed, and recognized the star of Jesus' birth. 
