--- a/_posts/2022-12-23-the 3 wise men.html
+++ b/_posts/2022-12-23-the 3 wise men.html
@@ -7,7 +7,7 @@ background: '/img/posts/wise.jpg'
 ---
 
 
-<p style="float:left">
+<p >
     <h2>Who were the wise men?</h2>
     A group of men (It is not known how many) were guided from a land East of Palestine.
     It is evident they were men of strong spiritual strength because they noticed, and recognized the star of Jesus' birth. 
@@ -17,13 +17,13 @@ background: '/img/posts/wise.jpg'
 
     <h2>The Star</h2>
     <img src="/img/posts/star.jpg" alt="awesome pic" padding: 10px>
-    We have Old testament and Book of Mormon references to a physical star being shown.
+    <p style="float:left"> have Old testament and Book of Mormon references to a physical star being shown.
     Once the wise men saw the star they immediately recognized it and started their 7 week journey to Bethlehem. 
     They initially arrived in Jerusalem and met King Herod. 
     They then acquired of Herod where Jesus was born and King Herod told them to go to Bethlehem and once they see
     Jesus to return and inform him so Herod could go a worship too. 
-
-    So the wise men traveled to Bethlehem and saw the star above the stable. 
+    So the wise men traveled to Bethlehem and saw the star above the stable. </p>
+    
     <br>
     Mathew 2:7
     <q>10 When they saw the star, they rejoiced with exceeding great joy.</q>
