--- a/_posts/2022-12-23-the 3 wise men.html
+++ b/_posts/2022-12-23-the 3 wise men.html
@@ -17,7 +17,7 @@ background: '/img/posts/wise.jpg'
 
     <h2>The Star</h2>
     <img src="/img/posts/star.jpg" alt="awesome pic" padding: 10px>
-    <p style="float:left"> have Old testament and Book of Mormon references to a physical star being shown.
+    <p style="float:right"> have Old testament and Book of Mormon references to a physical star being shown.
     Once the wise men saw the star they immediately recognized it and started their 7 week journey to Bethlehem. 
     They initially arrived in Jerusalem and met King Herod. 
     They then acquired of Herod where Jesus was born and King Herod told them to go to Bethlehem and once they see
