--- a/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
+++ b/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
@@ -15,6 +15,7 @@ background: '/img/posts/gethsemane.jpg'
 
 <ul>
     <li>
+    <img src = "img/posts/liberty.jpg">
     Joseph Smith
     During his time in Liberty jail, The Prophet Joseph Smith asked God where He was. 
     D&C 121
