--- a/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
+++ b/_posts/2022-12-22-If God really loves us so much, why does he allow so much suffering.html
@@ -15,16 +15,18 @@ background: '/img/posts/gethsemane.jpg'
 
 <ul>
     <li>
-    <img src = "img/posts/liberty.jpg">
-    Joseph Smith
-    During his time in Liberty jail, The Prophet Joseph Smith asked God where He was. 
-    D&C 121
-    <q> 1 O God, where art thou? And where is the pavilion that covereth thy bhiding place?</q>
-    And God responded.
-    <q> 7 My son, peace be unto thy soul; thine adversity and thine afflictions shall be but a small moment;</q>
-    <q> 8 And then, if thou endure it well, God shall exalt thee on high; thou shalt triumph over all thy foes.</q>
+
+        <img src = "img/posts/liberty.jpg">
+        Joseph Smith
+        During his time in Liberty jail, The Prophet Joseph Smith asked God where He was. 
+        D&C 121
+        <q> 1 O God, where art thou? And where is the pavilion that covereth thy bhiding place?</q>
+        And God responded.
+        <q> 7 My son, peace be unto thy soul; thine adversity and thine afflictions shall be but a small moment;</q>
+        <q> 8 And then, if thou endure it well, God shall exalt thee on high; thou shalt triumph over all thy foes.</q>
     </li>
     <li>
+        <img src="img/posts/job.jpg">
         Job
         Job was cursed with afflictions so bad he wished he were never born. 
 
